<resources>
    <string name="app_name">Cadastro Simples</string>
    <string name="salvar">Salvar</string>
    <string name="voltar">Voltar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="consultar">Consultar</string>
    <string name="alterar">Alterar</string>
    <string name="deletar">Deletar</string>
    <string name="nome">Nome</string>
    <string name="endereco">Endereço</string>
    <string name="sexo">Sexo</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="dtnascimento">Data de nascimento</string>
    <string name="estadocivil">Estado civil</string>
    <string name="ativo">Ativo</string>
    <string name="registroativo">Registro Ativo</string>
    <string name="registrodesativo">Registro Desativo</string>
    <string name="casado">Casado (a)</string>
    <string name="solteiro">Solteiro (a)</string>
    <string name="divorciado">Divorciado (a)</string>
    <string name="viuvo">Viúvo (a)</string>
    <string name="obrigatorio_nome">O campo nome é obrigatório.</string>
    <string name="obrigatorio_endereco">O campo endereço é obrigatório.</string>
    <string name="obrigatorio_dtnasc">O campo data de nascimento é obrigatório.</string>
    <string name="obrigatorio_sexo">O campo sexo é obrigatório.</string>
    <string name="registosalvo">Registro salvo com sucesso!!!</string>
    <string name="registroexcluido">Registro excluidocom sucesso !!</string>
</resources>
